examples/bad/06-function_wrong_number_of_arguments2.latf
int g(int x) {
    return x + 1;
}

int main() {
    g(21, 37); // error
    return 0;
}